--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Vue JS</title>
+  <script src="https://unpkg.com/vue@3.0.2"></script>
 </head>
 <body>
+  <h1>Hello, Vue =)</h1>
+
+  <div id="app">
+    <p>{{ title }}</p>
+    <p>{{ age }}</p>
+
+    <button v-on:click="age++">Increase age</button>
+    <button v-on:click="age--">Descrease age</button>
+    <div @click="changeTitle('Oathbringer')">Chance book title</div>
+
+    <div v-if="showBooks">
+      <p>{{ text }}</p>
+    </div>
+
+    <button @click="toggleShowBooks">
+      <span>Hide Books</span>
+    </button>
+
+    <!-- mouse events -->
+    
+
+
+
+  </div>
   
+  <script src="app.js"></script>
 </body>
 </html>
