--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vue JS</title>
   <script src="https://unpkg.com/vue@3.0.2"></script>
+  <style>
+    .box{
+      padding: 100px 0;
+      width: 400px;
+      text-align: center;
+      background: #ddd;
+      margin: 20px;
+      display: inline-block;
+    }
+  </style>
 </head>
 <body>
   <h1>Hello, Vue =)</h1>
 
   <div id="app">
-    <p>{{ title }}</p>
+    <!-- <p>{{ title }}</p>
     <p>{{ age }}</p>
 
     <button v-on:click="age++">Increase age</button>
@@ -24,10 +34,13 @@
 
     <button @click="toggleShowBooks">
       <span>Hide Books</span>
-    </button>
+    </button> -->
 
     <!-- mouse events -->
-    
+    <div class="box" @mouseover="handleEvent">mouseover (enter)</div>
+    <div class="box" @mouseleave="handleEvent">mouseleave</div>
+    <div class="box" @dblclick="handleEvent">double click</div>
+    <div class="box" @mousemove="handleMousemove">position - {{ x }} {{ y }}</div>
 
 
 
